--- a/src/main/webapp/panel.xhtml
+++ b/src/main/webapp/panel.xhtml
@@ -17,7 +17,7 @@
                 <h:outputText value="Номер счета"/>
                 <p:inputText id="account" disabled="true" styleClass="red" value="#{controlPanelView.account}"/>
             </h:panelGrid>
-            <h:panelGrid columns="4" cellpadding="4" columnClasses="topAligned,topAligned,topAligned,topAligned">
+            <h:panelGrid columns="6" cellpadding="4" columnClasses="topAligned,topAligned,topAligned,topAligned,topAligned,topAligned">
                 <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
                     <p:outputLabel for="typeOption" value="Тип опциона"/>
                     <p:selectOneRadio id="typeOption" value="#{controlPanelView.typeOption}" layout="grid" columns="1">
@@ -45,7 +45,24 @@
                     <p:outputLabel value="Серия опционов"/>
                     <p:selectOneMenu id="seriesOptions" value="#{controlPanelView.optionSelected}" disabled="#{controlPanelView.seriesOptionsDisable}" dynamic="true" style="width:100%">
                         <f:selectItems value="#{controlPanelView.seriesOptions}"/>
+                        <p:ajax event="change"  update="stepTeor" listener="#{controlPanelView.handleChangeSeriesOptions}"/>
                     </p:selectOneMenu>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="4">
+                    <h:outputText value="Заявка на продажу(OFFER)"/>
+                    <p:inputText id="offer" disabled="true" styleClass="red" value="#{controlPanelView.offerQuik}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="4">
+                    <h:outputText value="Теоретическая цена(THEOR)"/>
+                    <p:inputText id="theor" disabled="true" styleClass="red" value="#{controlPanelView.theorQuik}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="4">
+                    <h:outputText value="Заявка на покупку(BID)"/>
+                    <p:inputText id="bid" disabled="true" styleClass="red" value="#{controlPanelView.bidQuik}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="4">
+                    <p:outputLabel value="Шаг от теоретической цены"/>
+                    <p:spinner id="stepTeor" disabled="#{controlPanelView.stepTeorDisable}" value="#{controlPanelView.stepTeor}" />
                 </h:panelGrid>
 
             </h:panelGrid>
