--- a/src/main/webapp/panel.xhtml
+++ b/src/main/webapp/panel.xhtml
@@ -17,7 +17,7 @@
                 <h:outputText value="Номер счета"/>
                 <p:inputText id="account" disabled="true" styleClass="red" value="#{controlPanelView.account}"/>
             </h:panelGrid>
-            <h:panelGrid columns="9" cellpadding="4" columnClasses="topAligned,topAligned,topAligned,topAligned,topAligned,topAligned,topAligned,topAligned">
+            <h:panelGrid columns="10" cellpadding="4" columnClasses="topAligned,topAligned,topAligned,topAligned,topAligned,topAligned,topAligned,topAligned,topAligned">
                 <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
                     <p:outputLabel for="typeOption" value="Тип опциона"/>
                     <p:selectOneRadio id="typeOption" value="#{controlPanelView.typeOption}" layout="grid" columns="1">
@@ -28,7 +28,7 @@
                 </h:panelGrid>
                 <h:panelGrid columns="1" cellpadding="3">
                     <p:outputLabel value="Код базового актива"/>
-                    <p:selectOneMenu id="codeBase" value="#{controlPanelView.baseActiveCodeSelected}" disabled="#{controlPanelView.codeBaseDisable}" dynamic="true" style="width:100%">
+                    <p:selectOneMenu id="codeBase" autoWidth="false" size="3" value="#{controlPanelView.baseActiveCodeSelected}" disabled="#{controlPanelView.codeBaseDisable}" dynamic="true" style="width:100%">
                         <f:selectItems value="#{controlPanelView.baseActiveCodes}"/>
                         <p:ajax event="change" update="expirationDate, seriesOptions" listener="#{controlPanelView.handleChangeCodeBase()}"/>
                     </p:selectOneMenu>
@@ -45,7 +45,7 @@
                     <p:outputLabel value="Серия опционов"/>
                     <p:selectOneMenu id="seriesOptions" value="#{controlPanelView.optionSelected}" disabled="#{controlPanelView.seriesOptionsDisable}" dynamic="true" style="width:100%">
                         <f:selectItems value="#{controlPanelView.seriesOptions}"/>
-                        <p:ajax event="change" update="stepTeor" listener="#{controlPanelView.handleChangeSeriesOptions}"/>
+                        <p:ajax event="change" update="priceMin,priceMax" listener="#{controlPanelView.handleChangeSeriesOptions}"/>
                     </p:selectOneMenu>
                 </h:panelGrid>
                 <h:panelGrid columns="1" cellpadding="3">
@@ -61,21 +61,36 @@
                     <h:outputText value="Покупка"/>
                     <h:outputText id="bid" style="color: green" value="#{controlPanelView.bid}"/>
                 </h:panelGrid>
-                <h:panelGrid columns="2" cellpadding="3">
-                    <h:panelGrid columns="1" cellpadding="3">
-                        <p:outputLabel value="Отступ от теор."/>
-                        <p:spinner id="stepTeor" disabled="#{controlPanelView.stepTeorDisable}" value="#{controlPanelView.stepTeor}"/>
-                    </h:panelGrid>
-                    <h:panelGrid columns="2" cellpadding="3">
-                        <p:commandButton value="Покупка" id="buy" action="#{controlPanelView.buy()}" style="margin-right:20px;color: limegreen"/>
-                        <p:commandButton value="Продажа" id="sell" action="#{controlPanelView.sell()}" style="margin-right:20px;color: red"/>
-                    </h:panelGrid>
-
+                <h:panelGrid columns="1" cellpadding="3">
+                    <p:outputLabel value="Отступ min"/>
+                    <p:spinner id="priceMin" size="2" min="0" disabled="#{controlPanelView.stepTeorDisable}" value="#{controlPanelView.priceMin}" stepFactor="#{controlPanelView.step}"/>
                 </h:panelGrid>
 
+                <h:panelGrid columns="1" cellpadding="3">
+                    <p:outputLabel value="Отступ max"/>
+                    <p:spinner id="priceMax" size="2" min="0" disabled="#{controlPanelView.stepTeorDisable}" value="#{controlPanelView.priceMax}" stepFactor="#{controlPanelView.step}"/>
+                </h:panelGrid>
                 <p:poll interval="5" listener="#{controlPanelView.checkPrice}" update="theor, offer, bid"/>
             </h:panelGrid>
+            <h:panelGrid columns="4" cellpadding="1" columnClasses=",,,bottomAligned">
 
+                <h:panelGrid columns="1" cellpadding="1">
+                    <h:outputText value="Цена"/>
+                    <p:inputText id="price"  size="3" value="#{controlPanelView.price}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="1">
+                    <h:outputText value="Количество"/>
+                    <p:inputText id="contract"  size="3" value="#{controlPanelView.contract}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="1">
+                    <h:outputText value="Дробить"/>
+                    <p:inputText id="part" size="3" value="#{controlPanelView.part}"/>
+                </h:panelGrid>
+                <h:panelGrid columns="2" cellpadding="3" >
+                    <p:commandButton value="Покупка" id="buy" action="#{controlPanelView.buy()}" style="background-color: limegreen;margin-right:20px;color: whitesmoke"/>
+                    <p:commandButton value="Продажа" id="sell" action="#{controlPanelView.sell()}" style="background-color: red;margin-right:20px;color: whitesmoke"/>
+                </h:panelGrid>
+            </h:panelGrid>
         </p:panel>
 
 
